# rl_environment_hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION_SUMMARY.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_demo.sh  server.py  setup.sh  validate.py
cs_env/: __init__.py  curriculum.py  environment.py  grader.py  models.py  reward.py  state.py  tools.py
cs_env/tasks/: __init__.py  task_registry.py
openenv_cs_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: app.py
simulator-ui/: index.html  package-lock.json  package.json  vite.config.js
simulator-ui/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx
static/: app.js  index.html  style.css
