[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-cs-ops"
version = "1.0.0"
description = "Production-grade OpenEnv environment simulating customer support operations."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Prithvi", email = "prithvi@example.com"}
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "fastapi>=0.104.0,<1.0",
    "uvicorn>=0.24.0,<1.0",
    "openai>=2.7.2",
    "httpx>=0.25.0,<1.0",
    "pyyaml>=6.0,<7.0",
    "numpy>=1.24.0,<2.0",
    "aiofiles>=23.2.1,<24.0",
    "python-dotenv>=1.0.0,<2.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
agent = "inference:main"

[tool.setuptools]
packages = ["cs_env", "env"]
